fix: Button misaligned because of absolute

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,13 @@
-.setting-item.group-options {
-	display: inline-flex;
-	padding: 0;
-	position: absolute;
-	right:50px
+.setting-item.group-snippet-setting {
+	border: none;
+	padding: 0.2em 1em;
 }
 
 summary.group-snippets-summary {
-	padding-bottom: 20px;
+	height: 2em;
 }
 
-.setting-item.group-snippet-setting {
-	border: none;
-	padding: 4px 3%;
-
-}
-
-.setting-item.group-snippet-setting > .setting-item-info {
-	border: none;
-	display: list-item;
+.setting-item.group-options {
+	top: -1em;
+	position: relative;
 }
